correct right content out of screen width on narrow

--- a/resources/themes/style-narrow.scss
+++ b/resources/themes/style-narrow.scss
@@ -2,13 +2,13 @@
 
 
 #page-right-wrapper {
-	width: inherit;
+	width: auto;
 	float: none;
 	@extend .shadow-margin;
 }
 
 #page-wrapper {
-	width: inherit;
+	width: auto;
 	float: none;
 }
 
